[metadata]
name = tempus-themes
version = 2.3.0.20220206
url = https://gitlab.com/protesilaos/tempus-themes-generator
description = Accessible themes for Pygments
keywords = pygments, colorscheme
author = Protesilaos Stavrou
author_email = info@protesilaos.com
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing

[options]
packages = tempus_themes
install_requires = pygments

[options.entry_points]
pygments.styles =
    tempus_spring = tempus_themes.spring:TempusSpringStyle
    tempus_past = tempus_themes.past:TempusPastStyle
    tempus_day = tempus_themes.day:TempusDayStyle
    tempus_totus = tempus_themes.totus:TempusTotusStyle
    tempus_classic = tempus_themes.classic:TempusClassicStyle
    tempus_dawn = tempus_themes.dawn:TempusDawnStyle
    tempus_tempest = tempus_themes.tempest:TempusTempestStyle
    tempus_autumn = tempus_themes.autumn:TempusAutumnStyle
    tempus_summer = tempus_themes.summer:TempusSummerStyle
    tempus_future = tempus_themes.future:TempusFutureStyle
    tempus_night = tempus_themes.night:TempusNightStyle
    tempus_dusk = tempus_themes.dusk:TempusDuskStyle
    tempus_winter = tempus_themes.winter:TempusWinterStyle
    tempus_fugit = tempus_themes.fugit:TempusFugitStyle
    tempus_warp = tempus_themes.warp:TempusWarpStyle
    tempus_rift = tempus_themes.rift:TempusRiftStyle
